add-> batch update pwd

--- a/1.批量刷密码/seeyon/WEB-INF/cfgHome/plugin/i18n/common/CommonResources_zh_CN.properties
+++ b/1.批量刷密码/seeyon/WEB-INF/cfgHome/plugin/i18n/common/CommonResources_zh_CN.properties
@@ -126,7 +126,7 @@ common.body.type.officeword.label                          = Word\u6B63\u6587
 common.body.type.third.label                               = \u7B2C\u4E09\u65B9\u6B63\u6587
 common.body.type.wpsexcel.label                            = Wps\u8868\u683C
 common.body.type.wpsword.label                             = Wps\u6587\u5B57
-#common.bulletin.label                                      = \u516C\u544A
+#common.bulletin.label                                      = \u4fe1\u606f\u53d1\u5e03
 common.bulletin.label                                      = \u53d1\u5e03\u4fe1\u606f
 common.business.generator.label                            = \u4E1A\u52A1\u751F\u6210\u5668
 common.button.add.label                                    = \u6DFB\u52A0
@@ -363,7 +363,7 @@ common.list.label                                          = \u5217\u8868
 common.load.document.success                               = \u8C03\u5165\u6210\u529F!
 common.load.file.failure                                   = \u6253\u5F00\u5931\u8D25!
 common.load.file.success                                   = \u6253\u5F00\u6210\u529F!
-common.local.space.bulletin.label                          = \u672C\u7A7A\u95F4\u516C\u544A
+common.local.space.bulletin.label                          = \u672C\u7A7A\u95F4\u4fe1\u606f\u53d1\u5e03
 common.local.space.inquiry.label                           = \u672C\u7A7A\u95F4\u8C03\u67E5
 common.local.space.news.label                              = \u672C\u7A7A\u95F4\u4fe1\u606f\u53d1\u5e03
 common.login.log.check.0                                   = \u5F00\u59CB\u65F6\u95F4\u4E0D\u80FD\u665A\u4E8E\u7ED3\u675F\u65F6\u95F4
@@ -434,7 +434,7 @@ common.name.label                                          = \u540D\u79F0
 common.neum.illegal.character.info                         = \u5B58\u5728\u975E\u6CD5\u5B57\u7B26\uFF0C\u8BF7\u8F93\u5165\u5408\u6CD5\u67E5\u8BE2\u6761\u4EF6
 common.new.add.label                                       = \u65B0\u589E
 common.new.bbs.label                                       = \u65B0\u5EFA\u8BA8\u8BBA
-common.new.bulletin.label                                  = \u65B0\u5EFA\u516C\u544A
+common.new.bulletin.label                                  = \u65B0\u5EFA\u4fe1\u606f\u53d1\u5e03
 common.new.event.label                                     = \u65B0\u5EFA\u4E8B\u4EF6
 common.new.meeting.label                                   = \u65B0\u5EFA\u4F1A\u8BAE
 common.new.name.label                                      = \u65B0\u540D\u79F0
@@ -665,7 +665,7 @@ common.share.label6                                        = \u4F1A\u8BAE
 common.share.label60                                       = \u6211\u7684\u6536\u85CF
 common.share.label62                                       = \u901A\u8BAF\u5F55
 common.share.label66                                       = \u65E0\u6D41\u7A0B\u5E95\u8868
-common.share.label7                                        = \u516C\u544A
+common.share.label7                                        = \u4fe1\u606f\u53d1\u5e03
 common.share.label70                                       = \u62A5\u8868
 common.share.label8                                        = \u4fe1\u606f\u53d1\u5e03
 common.share.label9                                        = \u8BA8\u8BBA
