add-> batch update pwd

--- a/1.批量刷密码/seeyon/WEB-INF/cfgHome/plugin/bulletin/i18n/BulletinResources_zh_CN.properties
+++ b/1.批量刷密码/seeyon/WEB-INF/cfgHome/plugin/bulletin/i18n/BulletinResources_zh_CN.properties
@@ -7,7 +7,7 @@ bul.add.correlationfile                        = \u6DFB\u52A0\u5173\u8054\u6587\
 bul.alert.newsType.is.noNull                   = \u4fe1\u606f\u53d1\u5e03\u7248\u5757\u4E0D\u80FD\u4E3A\u7A7A\uFF01
 bul.article                                    = \u6B63\u6587
 bul.auditor.is.modify                          = \u5141\u8BB8\u5BA1\u6838\u5458\u4FEE\u6539
-bul.data                                       = \u4fe1\u606f\u53d1\u5e03\u4FE1\u606F
+bul.data                                       = \u4fe1\u606f\u4fe1\u606f\u53d1\u5e03
 bul.data.noexist                               = \u8BB0\u5F55\u5DF2\u7ECF\u88AB\u5220\u9664\u6216\u5F52\u6863\uFF01
 bul.data.publishDepartmentId                   = \u53D1\u5E03\u90E8\u95E8
 bul.data.moved                                 = \u79FB\u52A8\u6210\u529F\uFF01
@@ -165,7 +165,7 @@ bulletin.news_already_audit                    = \u8BE5\u65B0\u95FB\u5DF2\u5BA1\
 bulletin.news_delete                           = \u60A8\u786E\u8BA4\u53D6\u6D88\u53D1\u5E03\u8BE5\u65B0\u95FB\u5417\uFF1F
 bulletin.news_not_audit                        = \u8BE5\u65B0\u95FB\u5C1A\u672A\u5BA1\u6838\uFF0C\u4E0D\u80FD\u53D1\u5E03\uFF01
 bulletin.news_type_AlreadyUsed                 = \u5220\u9664\u65B0\u95FB\u7248\u5757\u65F6\uFF0C\u5C06\u8FDE\u540C\u7248\u5757\u4E0B\u7684\u65B0\u95FB\u4E00\u8D77\u5220\u9664\uFF0C\u5220\u9664\u4E0D\u53EF\u6062\u590D\uFF0C\u786E\u8BA4\u5417\uFF1F
-bulletin.no.issue.permit                       = \u60A8\u6CA1\u6709\u6743\u9650\u53D1\u5E03\u4fe1\u606f\u53d1\u5e03\uFF0C\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458\u5F00\u901A\u6743\u9650 
+bulletin.no.issue.permit                       = \u60A8\u6CA1\u6709\u6743\u9650\u4fe1\u606f\u53d1\u5e03\u53d1\u5e03\uFF0C\u8BF7\u8054\u7CFB\u7BA1\u7406\u5458\u5F00\u901A\u6743\u9650 
 bulletin.noAuditNoPublish                      = \u8BE5\u4fe1\u606f\u53d1\u5e03\u5C1A\u672A\u5BA1\u6838\uFF0C\u4E0D\u5141\u8BB8\u76F4\u63A5\u53D1\u5E03\uFF01
 bulletin.noBulletinExist                       = \u6CA1\u6709\u4EFB\u4F55\u4fe1\u606f\u53d1\u5e03\u54E6
 bulletin.not_purview                           = \u60A8\u6CA1\u6709\u53D1\u5E03\u6743\u9650\uFF01
@@ -184,7 +184,7 @@ bulletin.preIssue.show.set                     = \u663E\u793A\u8BBE\u7F6E
 bulletin.propertyMessage                       = \u5C5E\u6027\u4FE1\u606F
 bulletin.publishChoose.tips                    = \u9009\u62E9\u6216\u624B\u52A8\u8F93\u5165\u7684\u4EBA\u5458\u53EA\u7528\u4E8E\u5728\u4fe1\u606f\u53d1\u5e03\u8BE6\u60C5\u9875\u9762\u663E\u793A\uFF0C\u4E0D\u7EB3\u5165\u7EDF\u8BA1\u548C\u641C\u7D22\u3002
 bulletin.published_no_edit                     = \u5DF2\u7ECF\u53D1\u5E03\u7684\u4E0D\u5141\u8BB8\u4FEE\u6539\u3002\u53EA\u80FD\u67E5\u770B
-bulletin.publistBulleitn                       = \u53D1\u5E03\u4fe1\u606f\u53d1\u5e03
+bulletin.publistBulleitn                       = \u4fe1\u606f\u53d1\u5e03\u53d1\u5e03
 bulletin.read.info                             = \u9605\u8BFB\u4FE1\u606F
 bulletin.read.tips                             = \u517C\u804C\u526F\u5C97\u4EBA\u5458\u4E0D\u91CD\u590D\u8BA1\u5165\u603B\u9605\u8BFB\u4EBA\u6570
 bulletin.readCountView                         = \u9605\u8BFB\u91CF
