--- a/1.批量刷密码/seeyon/WEB-INF/cfgHome/plugin/bulletin/i18n/BulletinResources_zh_TW.properties
+++ b/1.批量刷密码/seeyon/WEB-INF/cfgHome/plugin/bulletin/i18n/BulletinResources_zh_TW.properties
@@ -7,7 +7,7 @@ bul.add.correlationfile                        = \u6DFB\u52A0\u95DC\u806F\u6A94\
 bul.alert.newsType.is.noNull                   = \u4fe1\u606f\u53d1\u5e03\u7248\u584A\u4E0D\u80FD\u70BA\u7A7A\uFF01
 bul.article                                    = \u6B63\u6587
 bul.auditor.is.modify                          = \u5141\u8A31\u5BE9\u6838\u54E1\u4FEE\u200B\u200B\u6539
-bul.data                                       = \u4fe1\u606f\u53d1\u5e03\u4FE1\u606F
+bul.data                                       = \u4fe1\u606f\u4fe1\u606f\u53d1\u5e03
 bul.data.noexist                               = \u8A18\u9304\u5DF2\u7D93\u88AB\u522A\u9664\u6216\u6B78\u6A94\uFF01
 bul.data.publishDepartmentId                   = \u767C\u5E03\u90E8\u9580
 bul.data.moved                                 = \u79FB\u52D5\u6210\u529F\uFF01
